<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/home" />
    <item
        android:id="@+id/transactionsFragment"
        android:icon="@drawable/ic_transactions_selector"
        android:title="@string/transactions" />
    <item
        android:id="@+id/accountsFragment"
        android:icon="@drawable/ic_accounts_selector"
        android:title="@string/accounts" />
    <item
        android:id="@+id/incomesFragment"
        android:icon="@drawable/ic_incomes_selector"
        android:title="@string/incomes" />
    <item
        android:id="@+id/blogFragment"
        android:icon="@drawable/ic_blog_selector"
        android:title="Blog" />
</menu>