<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.dialcadev.dialcash.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home"
        android:label="DialCash" />
    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.dialcadev.dialcash.ui.transactions.TransactionsFragment"
        tools:layout="@layout/fragment_transactions"
        android:label="@string/transactions_toolbar_t" />
    <fragment
        android:id="@+id/accountsFragment"
        android:name="com.dialcadev.dialcash.ui.accounts.AccountsFragment"
        tools:layout="@layout/fragment_accounts"
        android:label="@string/accounts_toolbar_t" />
    <fragment
        android:id="@+id/incomesFragment"
        android:name="com.dialcadev.dialcash.ui.incomegroup.IncomesFragment"
        tools:layout="@layout/fragment_incomes"
        android:label="@string/incomes_toolbar_t" />
    <fragment
        android:id="@+id/checkpointFragment"
        android:name="com.dialcadev.dialcash.ui.CheckpointFragment"
        tools:layout="@layout/fragment_checkpoint"
        android:label="Checkpoints" />
</navigation>